--- a/style.css
+++ b/style.css
@@ -54,22 +54,19 @@ a:hover {
 }
 
 .container {
-  width: 100%;
-  height: 100%;
+  width: 960px;
+  margin: 20px auto;
   padding: 0 20px;
-}
-
-.trigger {
-  margin: 1em 2em 2em;
-  color: #0792FB;
-  cursor: pointer;
-  display: inline;
-}
-
-.trigger:hover {
-  text-decoration: underline;
 }
 
 .viz {
   margin: 20px 0;
+  float:left;
 }
+
+.code {
+  float: left;
+  margin-left: 50px;
+  width: 450px;
+}
+
